style(option): fix contrast issue on chrome

--- a/www/src/scss/components/side-navigation.scss
+++ b/www/src/scss/components/side-navigation.scss
@@ -21,6 +21,7 @@
 
 	&__logo {
 		height: $navigation-height;
+		padding-bottom: 5px;
 	}
 
 	&__search {
